tests/baselines/reference/overrideLateBindableIndexSignature1(noimplicitoverride=false).errors.txt
overrideLateBindableIndexSignature1.ts(8,12): error TS4127: This member cannot have an 'override' modifier because its name is dynamic.
overrideLateBindableIndexSignature1.ts(22,12): error TS4127: This member cannot have an 'override' modifier because its name is dynamic.


==== overrideLateBindableIndexSignature1.ts (2 errors) ====
    const sym: symbol = Symbol();
    
    class Base1 {
      [sym]() {}
    }
    
    class Derived1 extends Base1 {
      override [sym]() {}
               ~~~~~
!!! error TS4127: This member cannot have an 'override' modifier because its name is dynamic.
    }
    
    class Base2 {
      [sym]() {}
    }
    
    class Derived2 extends Base2 {
      [sym]() {}
    }
    
    class Base3 {}
    
    class Derived3 extends Base3 {
      override [sym]() {}
               ~~~~~
!!! error TS4127: This member cannot have an 'override' modifier because its name is dynamic.
    }
    